--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,10 @@
     {
       "type": "composer",
       "url": "https://wpackagist.org"
+    },
+    {
+      "type": "vcs",
+      "url": "https://github.com/deliciousbrains/spinupwp-mu-plugin"
     }
   ],
   "config": {
@@ -26,9 +30,10 @@
   "require": {
     "php": ">=7.1",
     "composer/installers": "^1.4",
-    "vlucas/phpdotenv": "^2.0.1",
-    "oscarotero/env": "^1.1.0",
+    "deliciousbrains/spinupwp-mu-plugin": "dev-master",
     "johnpbloch/wordpress": "5.*",
+    "oscarotero/env": "^1.1.0",
+    "vlucas/phpdotenv": "^2.0.1",
     "wpackagist-plugin/limit-login-attempts": "*",
     "wpackagist-plugin/redis-cache": "*",
     "wpackagist-theme/twentynineteen": "*"
