Add Spinup mu plugin as proper mu-plugin.

--- a/.gitignore
+++ b/.gitignore
@@ -13,4 +13,7 @@ public/content/uploads
 !public/content/uploads/.gitkeep
 public/content/plugins
 public/content/themes/twenty*
+public/content/mu-plugins
+!public/content/mu-plugins/app.php
+
 
