--- a/.gitignore
+++ b/.gitignore
@@ -13,9 +13,9 @@ public/.htaccess
 public/content/debug.log
 public/content/uploads
 !public/content/uploads/.gitkeep
-public/content/plugins
+public/content/plugins/*
 public/content/themes/twenty*
-public/content/mu-plugins
+public/content/mu-plugins/*
 !public/content/mu-plugins/app.php
 
 
