--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,11 @@
   ],
   "config": {
     "preferred-install": "dist",
-    "sort-packages": true
+    "sort-packages": true,
+    "allow-plugins": {
+      "composer/installers": true,
+      "johnpbloch/wordpress-core-installer": true
+    }
   },
   "require": {
     "php": ">=7.3",
