Update coding standards branch for composer v2.2

--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
     "sort-packages": true,
     "allow-plugins": {
       "composer/installers": true,
-      "johnpbloch/wordpress-core-installer": true
+      "johnpbloch/wordpress-core-installer": true,
+      "dealerdirect/phpcodesniffer-composer-installer": true
     }
   },
   "require": {
