--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,8 @@
   "license": "GPL-2.0+",
   "authors": [
     {
-      "name": "Delicious Brains",
-      "homepage": "https://deliciousbrains.com/"
+      "name": "SpinupWP",
+      "homepage": "https://spinupwp.com/"
     }
   ],
   "type": "project",
